--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; }
     .skill { background: #ecf0f1; padding: 10px; border-radius: 6px; text-align: center; }
 
+    /* Profiles */
+    .profiles ul { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+    .profiles a { color: #3498db; font-weight: bold; }
+
     /* Contact */
     .contact p { text-align: center; font-size: 18px; }
     .contact a { color: #3498db; font-weight: bold; }
@@ -51,9 +55,10 @@
     <nav>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
-      <a href="#work">Work History</a>
+      <a href="#work">Work</a>
       <a href="#education">Education</a>
       <a href="#certifications">Certifications</a>
+      <a href="#profiles">Profiles</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -61,9 +66,10 @@
   <!-- About -->
   <section id="about">
     <h2>Professional Summary</h2>
-    <p>Independent and results-oriented Freelance Data Analyst / Research Analyst with proven expertise in Excel, Power BI, and SQL. 
-       Experienced in managing diverse client projects involving economic data analysis, stock market research, and advanced reporting. 
-       Skilled at building dashboards, conducting statistical research, and transforming complex data into clear, actionable insights.</p>
+    <p>Independent and results-oriented Freelance Data Analyst / Research Analyst with expertise in Excel, Power BI, and SQL. 
+       Experienced in economic data analysis, stock market research, and advanced reporting. Skilled at building dashboards, 
+       conducting statistical research, and transforming complex data into actionable insights. Recognized for delivering 
+       accurate, timely, and client-focused solutions that support data-driven decision making.</p>
   </section>
 
   <!-- Skills -->
@@ -89,12 +95,12 @@
     <h2>Work History</h2>
     <div class="card">
       <h3>Freelance Data Analyst & Research Analyst</h3>
-      <p><b>Upwork.com (Remote)</b> | 01/2021 – Current</p>
+      <p><b>Upwork.com (Remote)</b> | Jan 2021 – Present</p>
       <ul>
-        <li>Collected, cleaned, and analyzed datasets using Excel, Power BI, and SQL to deliver actionable insights.</li>
+        <li>Collected, cleaned, and analyzed datasets using Excel, Power BI, and SQL to deliver insights.</li>
         <li>Designed interactive dashboards and reports simplifying complex information for clients.</li>
         <li>Conducted economic and financial research, including stock market trend analysis and forecasting.</li>
-        <li>Supported businesses and startups with financial projections and risk assessments.</li>
+        <li>Supported businesses with financial projections and risk assessments.</li>
         <li>Delivered customized solutions across various industries.</li>
       </ul>
     </div>
@@ -132,7 +138,7 @@
   </section>
 
   <!-- Profiles -->
-  <section id="profiles">
+  <section id="profiles" class="profiles">
     <h2>Profiles</h2>
     <ul>
       <li><a href="https://www.upwork.com/freelancers/~01f8ac78c5805191eb" target="_blank">Upwork</a></li>
